# tablewright

./: README.md  desatomat  pyproject.toml  tablewright.py
tablewright/: cli.py  frontends.py  tests.py  transforms.py  version.py
