[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Tablewright"
version = "0.1.0"
description = "Open-source implementation of Desatomat and its Extended Desátomatu Syntax."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name="Alexios Angel", email="aangeletakis@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "lark",
    "argparse"
]

[project.urls]
Homepage = "https://github.com/alexios-angel/desatomat"
Issues = "https://github.com/alexios-angel/desatomat/issues"

[project.scripts]
desatomat = "desatomat:main_cli"
