[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tablewright"
version = "0.4.0"
description = "Open-source implementation of Desatomat and its Extended Desátomatu Syntax."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name="Alexios Angel", email="aangeletakis@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "lark>=1.1"
]

[project.urls]
Homepage = "https://github.com/alexios-angel/tablewright"
Issues = "https://github.com/alexios-angel/tablewright/issues"

[project.scripts]
tablewright = "tablewright:main_cli"
desatomat = "tablewright:main_cli"

[tool.setuptools]
py-modules = ["tablewright"]
